examples/test/testpolicy6601.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6601
  namespace: namespace82
spec:
  podSelector:
    matchLabels:
      key16: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value23
          key22: value28
      podSelector:
        matchLabels:
          key17: value41
          key10: value47
